// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migraatio epäaktiivinen-tilaan migroitu projekti 1`] = `
Object {
  "velho.saveProjekti": Array [
    Array [
      "1.2.246.578.5.1.2572523015.2790590568",
      Object {
        "ensimmainenJatkopaatos": Object {
          "aktiivinen": true,
          "asianumero": "jatkopaatos1_asianumero",
          "paatoksenPvm": "2020-01-01T00:00:00+02:00",
        },
        "hyvaksymispaatos": Object {
          "aktiivinen": true,
          "asianumero": "asianumero123",
          "paatoksenPvm": "2022-09-29",
        },
      },
    ],
  ],
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 1`] = `
Object {
  "description": "testImportHyvaksymispaatosvaiheAineistot",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
          "jarjestys": 1,
          "nimi": "T100 Kansilehti.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "muokkausTila": "MUOKKAUS",
      "uudelleenKuulutus": undefined,
    },
    "kasittelynTila": Object {
      "__typename": "KasittelynTila",
      "ensimmainenJatkopaatos": undefined,
      "hyvaksymispaatos": Object {
        "__typename": "Hyvaksymispaatos",
        "asianumero": "asianro123",
        "paatoksenPvm": "2022-06-09",
      },
      "toinenJatkopaatos": undefined,
    },
  },
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 2`] = `
Object {
  "description": "testHyvaksymisPaatosVaiheAfterApproval",
  "obj": Object {
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T100 Kansilehti.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
          "jarjestys": 1,
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/paatos/T100 Kansilehti.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "muokkausTila": "LUKU",
      "uudelleenKuulutus": undefined,
    },
    "hyvaksymisPaatosVaiheJulkaisu": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisu",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T100 Kansilehti.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksyja": "A000112",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
          "jarjestys": 1,
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/paatos/T100 Kansilehti.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hyvaksymisPaatosVaihePDFt": Object {
        "SUOMI": Object {
          "__typename": "HyvaksymisPaatosVaihePDF",
          "hyvaksymisIlmoitusLausunnonantajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T431_3 Ilmoitus hyvaksymispaatoksesta lausunnon antajille.pdf",
          "hyvaksymisIlmoitusMuistuttajillePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T431_4 Ilmoitus hyvaksymispaatoksesta muistuttajille.pdf",
          "hyvaksymisKuulutusPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaKunnalleToiselleViranomaisellePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T431_1 Ilmoitus hyvaksymispaatoksesta kunnalle ja toiselle viranomaiselle.pdf",
          "ilmoitusHyvaksymispaatoskuulutuksestaPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/1/T431_2 Ilmoitus hyvaksymispaatoksen kuulutuksesta.pdf",
        },
        "__typename": "HyvaksymisPaatosVaihePDFt",
      },
      "hyvaksymisPaiva": "**unittest**",
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusVaihePaattyyPaiva": "2100-01-01",
      "muokkaaja": "A000112",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusVayla": "HASSU/2/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "linkki": null,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "tyyppi": "TIE",
        "varahenkilonEmail": "mikko.haapamaki02@cgi.com",
        "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "0291111111",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 3`] = `
Object {
  "description": "publicProjektiHyvaksymisPaatosVaiheJulkinen kuulutusVaihePaattyyPaiva tulevaisuudessa",
  "obj": Object {
    "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
        "jarjestys": 1,
        "kategoriaId": "osa_a",
        "nimi": "T100 Kansilehti.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/T100 Kansilehti.txt",
        "tuotu": "***unittest***",
      },
    ],
    "hallintoOikeus": "HAMEENLINNA",
    "hyvaksymisPaatoksenAsianumero": "asianro123",
    "hyvaksymisPaatoksenPvm": "2022-06-09",
    "hyvaksymisPaatos": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2356553537.2278323212",
        "jarjestys": 1,
        "kategoriaId": undefined,
        "nimi": "T100 Kansilehti.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/paatos/T100 Kansilehti.txt",
        "tuotu": "***unittest***",
      },
    ],
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPDF": Object {
      "SUOMI": "/tiedostot/suunnitelma/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
      "__typename": "KuulutusPDFJulkinen",
    },
    "kuulutusPaiva": "2022-06-09",
    "kuulutusTekstit": Object {
      "__typename": "KuulutusTekstit",
      "infoTekstit": Array [
        "Päätökseen voi valittamalla hakea muutosta hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.",
      ],
      "kuvausTekstit": Array [],
      "leipaTekstit": Array [
        "Liikenne- ja viestintävirasto on 9.6.2022 päätöksellään asianro123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
        "Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä 9.6.2022 - 1.1.2100.  Asianosaisten katsotaan saaneen tiedon seitsemäntenä päivänä kuulutuksen julkaisemispäivästä (hallintolaki 62 a §).",
        "Kuulutus, päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus julkaistaan 9.6.2022 osoitteessa <a href=\\"https://localhost:3000/s/b5cb/hyvaksymispaatos\\">https://localhost:3000/s/b5cb/hyvaksymispaatos</a>.",
        "Kuulutettavasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.",
      ],
      "tietosuoja": "Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.vayla.fi/tietosuoja\\">https://www.vayla.fi/tietosuoja</a>.",
    },
    "kuulutusVaihePaattyyPaiva": "2100-01-01",
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/2/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "0291111111",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 4`] = `
Object {
  "public S3 files Hyvaksymispaatos": Object {
    "/T100 Kansilehti.txt": FileMetadata {
      "ContentDisposition": "inline; filename*=UTF-8''T100%20Kansilehti.txt",
      "ContentType": "text/plain",
      "checksum": "ABC123",
      "expirationDate": "2100-01-01T23:59:59+02:00",
      "fileType": "AINEISTO",
      "publishDate": "2022-06-09T00:00:00+03:00",
    },
  },
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 5`] = `
Object {
  "description": "publicProjektiHyvaksymisPaatosVaiheJulkinen kuulutusVaihePaattyyPaiva menneisyydessä",
  "obj": Object {
    "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": undefined,
    "hallintoOikeus": "HAMEENLINNA",
    "hyvaksymisPaatoksenAsianumero": "asianro123",
    "hyvaksymisPaatoksenPvm": "2022-06-09",
    "hyvaksymisPaatos": undefined,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPDF": Object {
      "SUOMI": "/tiedostot/suunnitelma/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
      "__typename": "KuulutusPDFJulkinen",
    },
    "kuulutusPaiva": "2022-06-09",
    "kuulutusTekstit": Object {
      "__typename": "KuulutusTekstit",
      "infoTekstit": Array [
        "Päätökseen voi valittamalla hakea muutosta hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.",
      ],
      "kuvausTekstit": Array [],
      "leipaTekstit": Array [
        "Liikenne- ja viestintävirasto on 9.6.2022 päätöksellään asianro123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
        "Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä 9.6.2022 - 10.6.2022.  Asianosaisten katsotaan saaneen tiedon seitsemäntenä päivänä kuulutuksen julkaisemispäivästä (hallintolaki 62 a §).",
        "Kuulutus, päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus julkaistaan 9.6.2022 osoitteessa <a href=\\"https://localhost:3000/s/b5cb/hyvaksymispaatos\\">https://localhost:3000/s/b5cb/hyvaksymispaatos</a>.",
        "Kuulutettavasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.",
      ],
      "tietosuoja": "Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.vayla.fi/tietosuoja\\">https://www.vayla.fi/tietosuoja</a>.",
    },
    "kuulutusVaihePaattyyPaiva": "2022-06-10",
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/2/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "0291111111",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 6`] = `
Object {
  "description": "publicProjektihyväksymismenettelyyn migroitu julkinen projekti",
  "obj": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisu": Object {
      "__typename": "AloitusKuulutusJulkaisuJulkinen",
      "tila": "MIGROITU",
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/2/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [],
    },
    "euRahoitus": false,
    "hyvaksymisPaatosVaihe": Object {
      "__typename": "HyvaksymisPaatosVaiheJulkaisuJulkinen",
      "aineistoNahtavilla": undefined,
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatoksenAsianumero": "asianro123",
      "hyvaksymisPaatoksenPvm": "2022-06-09",
      "hyvaksymisPaatos": undefined,
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/T431 Kuulutus hyvaksymispaatoksen nahtavillaolo.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2022-06-09",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Päätökseen voi valittamalla hakea muutosta hallinto-oikeudelta 30 päivän kuluessa päätöksen tiedoksisaannista. Muutoksenhaun tarkemmat ohjeet ovat päätöksen liitteenä olevassa valitusosoituksessa.",
        ],
        "kuvausTekstit": Array [],
        "leipaTekstit": Array [
          "Liikenne- ja viestintävirasto on 9.6.2022 päätöksellään asianro123, hyväksynyt liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
          "Päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus pidetään yleisesti nähtävillä 9.6.2022 - 10.6.2022.  Asianosaisten katsotaan saaneen tiedon seitsemäntenä päivänä kuulutuksen julkaisemispäivästä (hallintolaki 62 a §).",
          "Kuulutus, päätös ja sen perusteena olevat asiakirjat sekä valitusosoitus julkaistaan 9.6.2022 osoitteessa <a href=\\"https://localhost:3000/s/b5cb/hyvaksymispaatos\\">https://localhost:3000/s/b5cb/hyvaksymispaatos</a>.",
          "Kuulutettavasta hyväksymispäätöksestä on poistettu henkilötiedot. Mikäli haluatte alkuperäisen päätöksen, voitte pyytää sen projektipäälliköltä.",
        ],
        "tietosuoja": "Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.vayla.fi/tietosuoja\\">https://www.vayla.fi/tietosuoja</a>.",
      },
      "kuulutusVaihePaattyyPaiva": "2022-06-10",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/2/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "0291111111",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "lyhytOsoite": "b5cb",
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
      "tila": "MIGROITU",
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/2/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [],
    },
    "oid": "1.2.246.578.5.1.2789861876.697619507",
    "paivitetty": "***unit test***",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "elyOrganisaatio": undefined,
        "email": "mikko.haapamki@cgi.com",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "projektiPaallikko": true,
        "puhelinnumero": "0291111111",
        "sukunimi": "Hassu",
      },
    ],
    "status": "HYVAKSYTTY",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/2/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU MIGRAATIOTESTIPROJEKTI HYVÄKSYMISMENETTELYSSÄ",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "vuorovaikutusKierrokset": Array [
      Object {
        "__typename": "VuorovaikutusKierrosJulkinen",
        "tila": "MIGROITU",
        "vuorovaikutusNumero": 0,
        "yhteystiedot": Array [],
      },
    ],
  },
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 7`] = `
Object {
  "args": Object {
    "DistributionId": "unit-test-distribution-id",
    "InvalidationBatch": Object {
      "CallerReference": "***unittest***",
      "Paths": Object {
        "Items": Array [
          "/tiedostot/suunnitelma/1.2.246.578.5.1.2789861876.697619507/hyvaksymispaatos/*",
        ],
        "Quantity": 1,
      },
    },
  },
  "stub": "createInvalidation",
}
`;

exports[`Migraatio hyväksymismenettelyyn migroitu projekti 8`] = `
Object {
  "velho.saveProjekti": Array [
    Array [
      "1.2.246.578.5.1.2789861876.697619507",
      Object {
        "hyvaksymispaatos": Object {
          "asianumero": "asianro123",
          "paatoksenPvm": "2022-06-09",
        },
      },
    ],
  ],
}
`;

exports[`Migraatio nähtävilläolovaiheeseen migroitu projekti 1`] = `
Object {
  "description": "testNahtavillaOloPerustiedot",
  "obj": Object {
    "__typename": "NahtavillaoloVaihe",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
        "kategoriaId": "osa_a",
        "nimi": "TYHJÄ.txt",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "hankkeenKuvaus": Object {
      "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
      "__typename": "LokalisoituTeksti",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kuulutusPaiva": "2022-06-07",
    "kuulutusVaihePaattyyPaiva": "2042-06-07",
    "kuulutusYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [
        "A000112",
      ],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
    "lisaAineisto": undefined,
    "lisaAineistoParametrit": Object {
      "__typename": "LisaAineistoParametrit",
      "hash": "***unittest***",
      "nahtavillaoloVaiheId": 1,
      "poistumisPaiva": "***unittest***",
    },
    "muistutusoikeusPaattyyPaiva": "2042-06-08",
    "muokkausTila": "MUOKKAUS",
    "uudelleenKuulutus": undefined,
  },
}
`;

exports[`Migraatio nähtävilläolovaiheeseen migroitu projekti 2`] = `
Object {
  "description": "testImportNahtavillaoloAineistot",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2185960260.3380298692",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "lisaAineisto": undefined,
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "muokkausTila": "MUOKKAUS",
      "uudelleenKuulutus": undefined,
    },
  },
}
`;

exports[`Migraatio nähtävilläolovaiheeseen migroitu projekti 3`] = `
Object {
  "description": "testNahtavillaOloAfterApproval",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2185960260.3380298692",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/T100 Kansilehti.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/TYHJÄ.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "2022-03-11T14:54",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "kuulutusYhteystiedot": Object {
        "__typename": "StandardiYhteystiedot",
        "yhteysHenkilot": Array [
          "A000112",
        ],
        "yhteysTiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
          },
        ],
      },
      "lisaAineisto": undefined,
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "muokkausTila": "LUKU",
      "uudelleenKuulutus": undefined,
    },
    "nahtavillaoloVaiheJulkaisu": Object {
      "__typename": "NahtavillaoloVaiheJulkaisu",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2185960260.3380298692",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/T100 Kansilehti.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/TYHJÄ.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "hyvaksyja": "A000112",
      "hyvaksymisPaiva": "**unittest**",
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 491,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 178,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "id": 740,
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "***unittest***",
            "messageId": "messageId_test",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "lisaAineisto": undefined,
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "muokkaaja": "A000112",
      "nahtavillaoloPDFt": Object {
        "SUOMI": Object {
          "__typename": "NahtavillaoloPDF",
          "nahtavillaoloIlmoitusKiinteistonOmistajallePDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/T415 Ilmoitus kiinteistonomistajat nahtaville asettaminen.pdf",
          "nahtavillaoloIlmoitusPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/T414_1 Ilmoitus suunnitelman nahtavillaolo.pdf",
          "nahtavillaoloPDFPath": "/yllapito/tiedostot/projekti/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/1/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        },
        "__typename": "NahtavillaoloPDFt",
      },
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "Velho",
        "asiatunnusVayla": "HASSU/3/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "linkki": null,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "tyyppi": "TIE",
        "varahenkilonEmail": "mikko.haapamaki02@cgi.com",
        "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "0291111111",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
  },
}
`;

exports[`Migraatio nähtävilläolovaiheeseen migroitu projekti 4`] = `
Object {
  "description": "publicProjektiNahtavillaOloJulkinenAfterApproval",
  "obj": Object {
    "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2185960260.3380298692",
        "jarjestys": 1,
        "kategoriaId": "osa_a",
        "nimi": "T100 Kansilehti.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/T100 Kansilehti.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
        "jarjestys": undefined,
        "kategoriaId": "osa_a",
        "nimi": "TYHJÄ.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/TYHJÄ.txt",
        "tuotu": "***unittest***",
      },
    ],
    "hankkeenKuvaus": Object {
      "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
      "__typename": "LokalisoituTeksti",
    },
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "kuulutusPDF": Object {
      "SUOMI": "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
      "__typename": "KuulutusPDFJulkinen",
    },
    "kuulutusPaiva": "2022-06-07",
    "kuulutusTekstit": Object {
      "__typename": "KuulutusTekstit",
      "infoTekstit": Array [
        "Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.

Muistutuksen voi tehdä osoitteessa <a href=\\"***unittest***</a> tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus HASSU/3/2023.",
      ],
      "kuvausTekstit": Array [
        "Väylävirasto on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §).",
        "Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa <a href=\\"https://localhost:3000/s/734a/nahtavillaolo\\">https://localhost:3000/s/734a/nahtavillaolo</a>.",
      ],
      "leipaTekstit": Array [
        "Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO.",
      ],
      "tietosuoja": "Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.vayla.fi/tietosuoja\\">https://www.vayla.fi/tietosuoja</a>.",
    },
    "kuulutusVaihePaattyyPaiva": "2042-06-07",
    "muistutusoikeusPaattyyPaiva": "2042-06-08",
    "tila": "HYVAKSYTTY",
    "uudelleenKuulutus": undefined,
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/3/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "yhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "0291111111",
        "sahkoposti": "mikko.haapamki@cgi.com",
        "sukunimi": "Hassu",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
      },
    ],
  },
}
`;

exports[`Migraatio nähtävilläolovaiheeseen migroitu projekti 5`] = `
Object {
  "description": "publicProjektinähtävilläolovaiheeseen migroitu julkinen projekti",
  "obj": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisu": Object {
      "__typename": "AloitusKuulutusJulkaisuJulkinen",
      "tila": "MIGROITU",
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/3/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [],
    },
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "lyhytOsoite": "734a",
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2185960260.3380298692",
          "jarjestys": 1,
          "kategoriaId": "osa_a",
          "nimi": "T100 Kansilehti.txt",
          "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/T100 Kansilehti.txt",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": undefined,
          "kategoriaId": "osa_a",
          "nimi": "TYHJÄ.txt",
          "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/TYHJÄ.txt",
          "tuotu": "***unittest***",
        },
      ],
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "LokalisoituTeksti",
      },
      "kielitiedot": Object {
        "__typename": "Kielitiedot",
        "ensisijainenKieli": "SUOMI",
      },
      "kuulutusPDF": Object {
        "SUOMI": "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/T414 Kuulutus suunnitelman nahtavillaolo.pdf",
        "__typename": "KuulutusPDFJulkinen",
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusTekstit": Object {
        "__typename": "KuulutusTekstit",
        "infoTekstit": Array [
          "Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 7.6.2042 mennessä.

Muistutuksen voi tehdä osoitteessa <a href=\\"***unittest***</a> tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen <kirjaamon VAYLAVIRASTO osoitetta ei löydy>. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus HASSU/3/2023.",
        ],
        "kuvausTekstit": Array [
          "Väylävirasto on 7.6.2022 julkaissut kuulutuksen suunnitelman nähtäville asettamisesta. Asianosaisten katsotaan saaneen tiedon suunnitelman nähtäville asettamisesta seitsemäntenä kalenteripäivänä kuulutuksen julkaisusta (hallintolaki 62 a §).",
          "Suunnitelma pidetään nähtävillä 7.6.2022 - 7.6.2042 osoitteessa <a href=\\"https://localhost:3000/s/734a/nahtavillaolo\\">https://localhost:3000/s/734a/nahtavillaolo</a>.",
        ],
        "leipaTekstit": Array [
          "Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO.",
        ],
        "tietosuoja": "Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, <a external=\\"true\\" href=\\"https://www.vayla.fi/tietosuoja\\">https://www.vayla.fi/tietosuoja</a>.",
      },
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "tila": "HYVAKSYTTY",
      "uudelleenKuulutus": undefined,
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/3/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "0291111111",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
        },
      ],
    },
    "oid": "1.2.246.578.5.1.2574551391.2902330452",
    "paivitetty": "***unit test***",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "elyOrganisaatio": undefined,
        "email": "mikko.haapamki@cgi.com",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "projektiPaallikko": true,
        "puhelinnumero": "0291111111",
        "sukunimi": "Hassu",
      },
    ],
    "status": "NAHTAVILLAOLO",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/3/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU MIGRAATIOTESTIPROJEKTI NÄHTÄVILLÄOLO",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "vuorovaikutusKierrokset": Array [
      Object {
        "__typename": "VuorovaikutusKierrosJulkinen",
        "tila": "MIGROITU",
        "vuorovaikutusNumero": 0,
        "yhteystiedot": Array [],
      },
    ],
  },
}
`;

exports[`Migraatio nähtävilläolovaiheeseen migroitu projekti 6`] = `
Object {
  "args": Object {
    "DistributionId": "unit-test-distribution-id",
    "InvalidationBatch": Object {
      "CallerReference": "***unittest***",
      "Paths": Object {
        "Items": Array [
          "/tiedostot/suunnitelma/1.2.246.578.5.1.2574551391.2902330452/nahtavillaolo/*",
        ],
        "Quantity": 1,
      },
    },
  },
  "stub": "createInvalidation",
}
`;

exports[`Migraatio suunnitteluvaiheeseen migroitu projekti 1`] = `
Object {
  "description": "testSuunnitteluvaihePerustiedot",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": Object {
      "SUOMI": "huomenna",
      "__typename": "LokalisoituTeksti",
    },
    "esitettavatYhteystiedot": undefined,
    "esittelyaineistot": undefined,
    "hankkeenKuvaus": Object {
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": undefined,
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": undefined,
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": Object {
      "SUOMI": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
      "__typename": "LokalisoituTeksti",
    },
    "tila": "MUOKATTAVISSA",
    "videot": undefined,
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": undefined,
  },
}
`;

exports[`Migraatio suunnitteluvaiheeseen migroitu projekti 2`] = `
Object {
  "description": "testSuunnitteluvaiheVuorovaikutus",
  "obj": Object {
    "__typename": "VuorovaikutusKierros",
    "arvioSeuraavanVaiheenAlkamisesta": Object {
      "SUOMI": "huomenna",
      "__typename": "LokalisoituTeksti",
    },
    "esitettavatYhteystiedot": Object {
      "__typename": "StandardiYhteystiedot",
      "yhteysHenkilot": Array [],
      "yhteysTiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
    "esittelyaineistot": undefined,
    "hankkeenKuvaus": Object {
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "LokalisoituTeksti",
    },
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 491,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 178,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "id": 740,
          "lahetetty": "2022-03-11T14:54",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnitelmaluonnokset": undefined,
    "suunnittelumateriaali": undefined,
    "suunnittelunEteneminenJaKesto": Object {
      "SUOMI": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
      "__typename": "LokalisoituTeksti",
    },
    "tila": "MUOKATTAVISSA",
    "videot": Array [
      Object {
        "SUOMI": Object {
          "__typename": "Linkki",
          "nimi": "Esittely 0",
          "url": "https://video",
        },
        "__typename": "LokalisoituLinkki",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-03",
    "vuorovaikutusNumero": 0,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": Object {
          "SUOMI": "Lorem ipsum 0",
          "__typename": "LokalisoituTeksti",
        },
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": Object {
          "SUOMI": "Ensimmäinen ovi vasemmalla",
          "__typename": "LokalisoituTeksti",
        },
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "nimi": Object {
          "SUOMI": "Lorem ipsum two 0",
          "__typename": "LokalisoituTeksti",
        },
        "osoite": Object {
          "SUOMI": "Katu 123",
          "__typename": "LokalisoituTeksti",
        },
        "paattymisAika": "11:00",
        "paikka": Object {
          "SUOMI": "Kunnantalo",
          "__typename": "LokalisoituTeksti",
        },
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": Object {
          "SUOMI": "Helsinki",
          "__typename": "LokalisoituTeksti",
        },
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": Object {
          "SUOMI": "Soittoaikatilaisuuden nimi tässä",
          "__typename": "LokalisoituTeksti",
        },
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Object {
          "__typename": "StandardiYhteystiedot",
          "yhteysHenkilot": Array [],
          "yhteysTiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        "nimi": Object {
          "SUOMI": "Toisen soittoaikatilaisuuden nimi tässä",
          "__typename": "LokalisoituTeksti",
        },
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
  },
}
`;

exports[`Migraatio suunnitteluvaiheeseen migroitu projekti 3`] = `
Object {
  "description": "publicProjekti vuorovaikutusKierrosJulkaisut",
  "obj": Array [
    Object {
      "__typename": "VuorovaikutusKierrosJulkinen",
      "arvioSeuraavanVaiheenAlkamisesta": Object {
        "SUOMI": "huomenna",
        "__typename": "LokalisoituTeksti",
      },
      "esittelyaineistot": undefined,
      "hankkeenKuvaus": Object {
        "SUOMI": "Lorem Ipsum suunnitteluvaihe",
        "__typename": "LokalisoituTeksti",
      },
      "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
      "suunnitelmaluonnokset": undefined,
      "suunnittelumateriaali": undefined,
      "suunnittelunEteneminenJaKesto": Object {
        "SUOMI": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
        "__typename": "LokalisoituTeksti",
      },
      "tila": "JULKINEN",
      "videot": Array [
        Object {
          "SUOMI": Object {
            "__typename": "Linkki",
            "nimi": "Esittely 0",
            "url": "https://video",
          },
          "__typename": "LokalisoituLinkki",
        },
      ],
      "vuorovaikutusJulkaisuPaiva": "2022-03-03",
      "vuorovaikutusNumero": 0,
      "vuorovaikutusPDFt": Object {
        "SUOMI": Object {
          "__typename": "VuorovaikutusPDF",
          "kutsuPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2983738467.1825323454/suunnitteluvaihe/vuorovaikutus_1/T413 Kutsu vuorovaikutukseen.pdf",
        },
        "__typename": "VuorovaikutusPDFt",
      },
      "vuorovaikutusTilaisuudet": Array [
        Object {
          "__typename": "VuorovaikutusTilaisuusJulkinen",
          "alkamisAika": "15:00",
          "kaytettavaPalvelu": "TEAMS",
          "nimi": Object {
            "SUOMI": "Lorem ipsum 0",
            "__typename": "LokalisoituTeksti",
          },
          "paattymisAika": "16:00",
          "paivamaara": "2022-03-04",
          "peruttu": undefined,
          "tyyppi": "VERKOSSA",
        },
        Object {
          "Saapumisohjeet": Object {
            "SUOMI": "Ensimmäinen ovi vasemmalla",
            "__typename": "LokalisoituTeksti",
          },
          "__typename": "VuorovaikutusTilaisuusJulkinen",
          "alkamisAika": "10:00",
          "nimi": Object {
            "SUOMI": "Lorem ipsum two 0",
            "__typename": "LokalisoituTeksti",
          },
          "osoite": Object {
            "SUOMI": "Katu 123",
            "__typename": "LokalisoituTeksti",
          },
          "paattymisAika": "11:00",
          "paikka": Object {
            "SUOMI": "Kunnantalo",
            "__typename": "LokalisoituTeksti",
          },
          "paivamaara": "2022-04-05",
          "peruttu": undefined,
          "postinumero": "00100",
          "postitoimipaikka": Object {
            "SUOMI": "Helsinki",
            "__typename": "LokalisoituTeksti",
          },
          "tyyppi": "PAIKALLA",
        },
        Object {
          "__typename": "VuorovaikutusTilaisuusJulkinen",
          "alkamisAika": "10:00",
          "nimi": Object {
            "SUOMI": "Soittoaikatilaisuuden nimi tässä",
            "__typename": "LokalisoituTeksti",
          },
          "paattymisAika": "11:00",
          "paivamaara": "2022-04-05",
          "peruttu": undefined,
          "tyyppi": "SOITTOAIKA",
          "yhteystiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
        Object {
          "__typename": "VuorovaikutusTilaisuusJulkinen",
          "alkamisAika": "12:00",
          "nimi": Object {
            "SUOMI": "Toisen soittoaikatilaisuuden nimi tässä",
            "__typename": "LokalisoituTeksti",
          },
          "paattymisAika": "13:00",
          "paivamaara": "2033-04-05",
          "peruttu": undefined,
          "tyyppi": "SOITTOAIKA",
          "yhteystiedot": Array [
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Etunimi",
              "puhelinnumero": "0293121213",
              "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
              "sukunimi": "Sukunimi",
            },
            Object {
              "__typename": "Yhteystieto",
              "etunimi": "Joku",
              "puhelinnumero": "02998765",
              "sahkoposti": "Joku.Jokunen@vayla.fi",
              "sukunimi": "Jokunen",
            },
          ],
        },
      ],
      "yhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "A-tunnus1",
          "organisaatio": "CGI Suomi Oy",
          "puhelinnumero": "0291111111",
          "sahkoposti": "mikko.haapamki@cgi.com",
          "sukunimi": "Hassu",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Marko",
          "organisaatio": "Kajaani",
          "puhelinnumero": "0293121213",
          "sahkoposti": "markku.koi@koi.com",
          "sukunimi": "Koi",
        },
      ],
    },
  ],
}
`;

exports[`Migraatio suunnitteluvaiheeseen migroitu projekti 4`] = `
Object {
  "description": "publicProjektisuunnitteluvaiheeseen migroitu julkinen projekti",
  "obj": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisu": Object {
      "__typename": "AloitusKuulutusJulkaisuJulkinen",
      "tila": "MIGROITU",
      "velho": Object {
        "__typename": "VelhoJulkinen",
        "asiatunnusELY": undefined,
        "asiatunnusVayla": "HASSU/4/2023",
        "kunnat": Array [
          91,
          92,
        ],
        "kuvaus": undefined,
        "maakunnat": Array [
          1,
        ],
        "nimi": "HASSU MIGRAATIOTESTIPROJEKTI SUUNNITTELU",
        "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
        "toteuttavaOrganisaatio": undefined,
        "tyyppi": "TIE",
        "vaylamuoto": Array [
          "tie",
        ],
      },
      "yhteystiedot": Array [],
    },
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "lyhytOsoite": "7912",
    "oid": "1.2.246.578.5.1.2983738467.1825323454",
    "paivitetty": "***unit test***",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "elyOrganisaatio": undefined,
        "email": "mikko.haapamki@cgi.com",
        "etunimi": "A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "projektiPaallikko": true,
        "puhelinnumero": "0291111111",
        "sukunimi": "Hassu",
      },
    ],
    "status": "SUUNNITTELU",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": "HASSU/4/2023",
      "kunnat": Array [
        91,
        92,
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        1,
      ],
      "nimi": "HASSU MIGRAATIOTESTIPROJEKTI SUUNNITTELU",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
    "vuorovaikutusKierrokset": Array [
      Object {
        "__typename": "VuorovaikutusKierrosJulkinen",
        "arvioSeuraavanVaiheenAlkamisesta": Object {
          "SUOMI": "huomenna",
          "__typename": "LokalisoituTeksti",
        },
        "esittelyaineistot": undefined,
        "hankkeenKuvaus": Object {
          "SUOMI": "Lorem Ipsum suunnitteluvaihe",
          "__typename": "LokalisoituTeksti",
        },
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnitelmaluonnokset": undefined,
        "suunnittelumateriaali": undefined,
        "suunnittelunEteneminenJaKesto": Object {
          "SUOMI": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
          "__typename": "LokalisoituTeksti",
        },
        "tila": "JULKINEN",
        "videot": Array [
          Object {
            "SUOMI": Object {
              "__typename": "Linkki",
              "nimi": "Esittely 0",
              "url": "https://video",
            },
            "__typename": "LokalisoituLinkki",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-03",
        "vuorovaikutusNumero": 0,
        "vuorovaikutusPDFt": Object {
          "SUOMI": Object {
            "__typename": "VuorovaikutusPDF",
            "kutsuPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2983738467.1825323454/suunnitteluvaihe/vuorovaikutus_1/T413 Kutsu vuorovaikutukseen.pdf",
          },
          "__typename": "VuorovaikutusPDFt",
        },
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuusJulkinen",
            "alkamisAika": "15:00",
            "kaytettavaPalvelu": "TEAMS",
            "nimi": Object {
              "SUOMI": "Lorem ipsum 0",
              "__typename": "LokalisoituTeksti",
            },
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "peruttu": undefined,
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": Object {
              "SUOMI": "Ensimmäinen ovi vasemmalla",
              "__typename": "LokalisoituTeksti",
            },
            "__typename": "VuorovaikutusTilaisuusJulkinen",
            "alkamisAika": "10:00",
            "nimi": Object {
              "SUOMI": "Lorem ipsum two 0",
              "__typename": "LokalisoituTeksti",
            },
            "osoite": Object {
              "SUOMI": "Katu 123",
              "__typename": "LokalisoituTeksti",
            },
            "paattymisAika": "11:00",
            "paikka": Object {
              "SUOMI": "Kunnantalo",
              "__typename": "LokalisoituTeksti",
            },
            "paivamaara": "2022-04-05",
            "peruttu": undefined,
            "postinumero": "00100",
            "postitoimipaikka": Object {
              "SUOMI": "Helsinki",
              "__typename": "LokalisoituTeksti",
            },
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuusJulkinen",
            "alkamisAika": "10:00",
            "nimi": Object {
              "SUOMI": "Soittoaikatilaisuuden nimi tässä",
              "__typename": "LokalisoituTeksti",
            },
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "peruttu": undefined,
            "tyyppi": "SOITTOAIKA",
            "yhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
              },
            ],
          },
          Object {
            "__typename": "VuorovaikutusTilaisuusJulkinen",
            "alkamisAika": "12:00",
            "nimi": Object {
              "SUOMI": "Toisen soittoaikatilaisuuden nimi tässä",
              "__typename": "LokalisoituTeksti",
            },
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "peruttu": undefined,
            "tyyppi": "SOITTOAIKA",
            "yhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
              },
            ],
          },
        ],
        "yhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "0291111111",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
    ],
  },
}
`;

exports[`Migraatio suunnitteluvaiheeseen migroitu projekti 5`] = `
Object {
  "args": Object {
    "DistributionId": "unit-test-distribution-id",
    "InvalidationBatch": Object {
      "CallerReference": "***unittest***",
      "Paths": Object {
        "Items": Array [
          "/tiedostot/suunnitelma/1.2.246.578.5.1.2983738467.1825323454/suunnitteluvaihe/vuorovaikutus_1/*",
        ],
        "Quantity": 1,
      },
    },
  },
  "stub": "createInvalidation",
}
`;
